[package]
name = "wheel-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = "0.7.4"
dotenvy = "0.15.7"
futures-util = "0.3.30"
obws = { version = "0.12.0", features = ["events"] }
once_cell = "1.19.0"
postgres = "0.19.7"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
